# watsonxai

./: .gitignore
alpha/backend/: .env.sample  README.md  requirements.txt
alpha/backend/app/: constant.py  main.py
alpha/backend/app/api/: router.py
alpha/backend/app/api/audio/: audio_summarizer.py
alpha/backend/app/services/: speech_to_text_service.py  watsonx_ai.py
alpha/frontend/: package.json
alpha/frontend/src/: App.js
alpha/frontend/src/components/: AudioSummarizer.js
crewAI/stock_analysis/: README.md  main.py  requirements.txt
groq/v1/: README.md  simple.py  simple_result.txt  speech_to_text.py  speech_to_text_result.txt  text_generation.py  text_generation_result.txt
litellm/: .env.sample  README.md  main.py  requirements.txt
python/audio-summarizer/simple/: README.md  audio_summarizer.py  requirements.txt  result.txt
python/beeai-framework/: .env.sample  README.md  simple.py
python/granite-speech/: README.md  main.py  output.txt  requirements.txt
python/mcp-client/todo-mcp-client-v1/: .env.sample  README.md  client.py  main.py  pyproject.toml  sample-output.md
python/mcp-server/todo-mcp-server-v1/: .env.sample  README.md  main.py  pyproject.toml  server.py
python/rag/: .env.sample  README.md  rag_app.py
python/todo/: README.md  main.py
python/watsonxai-with-cache/: .env.sample  README.md  embedding.py  redis_cache.py  redis_semantic_cache.py  requirements.txt  watsonx_ai.py
wxa/1/: 1.html  2.html  3.html
wxo/agents/adk-agent-tool/: README.md  greeting_agent.yaml  greeting_tool.py
wxo/python/: README.md  simple.py
