[project]
name = "todo-mcp-client-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-ibm>=0.3.15",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.5.4",
    "mcp>=1.12.0",
]

[tool.uv.workspace]
members = [
    "todo-mcp-client",
]
